# HARP

./: HARP_README.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/versions/: e1f2a3b4c5d6_harp_memory_and_embedding_dim.py
backend/app/: config.py  main.py
backend/app/agents/: citation_agent.py  memory_agent.py  retrieval_agent.py  supervisor.py
backend/app/api/: memory.py
backend/app/database/: memory.py
backend/app/database/models/: constants.py  conversation.py  conversation_message.py  conversation_summary.py
backend/app/llms/: base.py  llama3.py  mistral.py  openai_provider.py  phi3.py  provider_factory.py  router.py
backend/app/mcp/: server.py
backend/app/mcp/prompts/: templates.py
backend/app/mcp/resources/: collections.py
backend/app/mcp/tools/: chat_history.py  document_metadata.py  document_search.py  document_upload.py
backend/app/observability/: langsmith.py  metrics.py
backend/app/retrieval/: dense.py  reranker.py  retriever.py  sparse.py  types.py
backend/app/schemas/: memory.py
backend/ingest/: embeddings.py
backend/scripts/: reembed_chunks.py  setup_ollama.sh
docs/: claude_desktop_config.json
frontend/src/components/chat/: MCPToolStatus.tsx  MemoryViewer.tsx  ModelSelector.tsx  RoutingDiagnostics.tsx
